# pick_and_place

my_arm/: CMakeLists.txt  package.xml
my_arm/config/: moveit.rviz  my_arm.rviz  panda_gazebo.urdf.xacro  ur_arm_hand.urdf.xacro  ur_arm_hand2.urdf.xacro
my_arm/launch/: panda_gazebo.launch.py  panda_moveit.launch.py  ur_arm_hand_gazebo.launch.py  ur_arm_hand_moveit.launch.py  ur_gazebo.launch.py  ur_moveit.launch.py
pick_and_place/: CMakeLists.txt  package.xml
pick_and_place/include/pick_and_place/: robot_arm_node.hpp
pick_and_place/launch/: moveit.rviz  panda_arm.launch.py  pick_and_place.launch.py
pick_and_place/src/: robot_arm_node_main.cpp
pick_and_place/src/pick_and_place/: robot_arm_node.cpp
pick_and_place_pilz/: CMakeLists.txt  package.xml
pick_and_place_pilz/include/pick_and_place_pilz/: robot_arm_node.hpp
pick_and_place_pilz/launch/: create_world.launch.py  moveit.rviz  panda_gazebo.launch.py  pick_and_place.launch.py  spawn_robot.launch.py  view_panda_gazebo.launch.py  view_ur.launch.py  view_ur_gazebo.launch.py
pick_and_place_pilz/params/: params.yaml
pick_and_place_pilz/src/: robot_arm_node_main.cpp
pick_and_place_pilz/src/pick_and_place/: robot_arm_node.cpp
